[package]
name = "star-history"
version = "1.0.15"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-utilities"]
description = "Graph history of GitHub stars of a user or repo over time"
edition = "2021"
exclude = ["screenshots"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/star-history"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
gh-token = { version = "0.1.5", path = "gh-token" }
opener = "0.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
