[package]
name = "star-history"
version = "1.0.20"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["command-line-utilities"]
description = "Graph history of GitHub stars of a user or repo over time"
edition = "2021"
exclude = ["screenshots"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/star-history"

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.35", features = ["serde"] }
gh-token = { version = "0.1.7", path = "gh-token" }
opener = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"
thiserror = "1.0.56"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
