[package]
name = "gh-token"
version = "0.1.8"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Deserialize gh cli's GitHub token from ~/.config/gh/hosts.yml"
documentation = "https://docs.rs/gh-token"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/star-history"
rust-version = "1.88"

[dependencies]
home = "0.5"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_yaml = "0.9.30"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
